--- a/Lab1-Console/PowerConsumptionCalc/PowerCalcClasses/PowerCalcClasses.csproj
+++ b/Lab1-Console/PowerConsumptionCalc/PowerCalcClasses/PowerCalcClasses.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PowerGrid.cs" />
+    <Compile Include="PowerGridConsoleUI.cs" />
+    <Compile Include="PowerGridData.cs" />
+    <Compile Include="PowerLoadItem.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
