Classes and Structs Demo Added

--- a/Lab1-Console/PowerConsumptionCalc/PowerCalcClasses/PowerCalcClasses.csproj
+++ b/Lab1-Console/PowerConsumptionCalc/PowerCalcClasses/PowerCalcClasses.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClassesDemo.cs" />
     <Compile Include="PowerGridConsoleUI.cs" />
     <Compile Include="PowerGridData.cs" />
     <Compile Include="PowerLoadItem.cs" />
