Classes hierarchy added

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Lab1-Console/PowerConsumptionCalc/PowerConsumptionCalc/obj/
 *.suo
 *.cache
 Lab1-Console/PowerConsumptionCalc/PowerCalcClasses/obj/
+Lab1-Console/PowerConsumptionCalc/PowerCalcClasses/bin/
+Lab1-Console/PowerConsumptionCalc/.vs/
