WPF Application Added

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Lab1-Console/PowerConsumptionCalc/PowerConsumptionCalc/obj/
 Lab1-Console/PowerConsumptionCalc/PowerCalcClasses/obj/
 Lab1-Console/PowerConsumptionCalc/PowerCalcClasses/bin/
 Lab1-Console/PowerConsumptionCalc/.vs/
+Lab1-Console/PowerConsumptionCalc/PowerCalcForWindows/bin/
