--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Lab1-Console/PowerConsumptionCalc/PowerCalcClasses/obj/
 Lab1-Console/PowerConsumptionCalc/PowerCalcClasses/bin/
 Lab1-Console/PowerConsumptionCalc/.vs/
 Lab1-Console/PowerConsumptionCalc/PowerCalcForWindows/bin/
+Lab1-Console/PowerConsumptionCalc/PowerCalcForWindows/obj/
