--- a/Lab1-Console/PowerConsumptionCalc/PowerCalcForWindows/PowerCalcForWindows.csproj
+++ b/Lab1-Console/PowerConsumptionCalc/PowerCalcForWindows/PowerCalcForWindows.csproj
@@ -56,6 +56,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="LoadInputDlg.xaml.cs">
+      <DependentUpon>LoadInputDlg.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -68,6 +71,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="LoadInputDlg.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PowerGridData.cs" />
