cosmetic code cleanup

--- a/Lab1-Console/PowerConsumptionCalc/PowerCalcForWindows/PowerCalcForWindows.csproj
+++ b/Lab1-Console/PowerConsumptionCalc/PowerCalcForWindows/PowerCalcForWindows.csproj
@@ -103,6 +103,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PowerCalcClasses\PowerCalcClasses.csproj">
+      <Project>{4282a90b-793b-475e-85b1-3bcc620ba85d}</Project>
+      <Name>PowerCalcClasses</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
